# mifapi

./: .gitignore  Dockerfile  LICENSE  README.md  build.cmd  build_avif.sh  build_avif_macos.sh  build_cjxl.sh  getcert.sh  nginx.conf  pyproject.toml  requirements.txt  run.sh  sample_request.py  test.sh
.github/workflows/: docker-builder.yml  docker-linter.yml  python-linux.yml
app/: main.py  prestart.sh  pytest.sh  requirements.txt  test_main.py
html/: gui.html  index.html  sample.avif  sample.jxl
