[tool.poetry]
name = "mifapi"
version = "0.3.0"
description = "mifapi: Modern Image Formats (JPEG XL and AVIF) Web API"
authors = ["Evgeny Varnavskiy <varnavruz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
APScheduler = "^3.6.3"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
requests = "^2.28.0"
Pillow = "^9.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
